@@ -1,5 +1,15 @@
 2006-04-02 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* include/Dialog_Filesystems.h,
+	  include/GParted_Core.h,
+	  include/Makefile.am,
+	  include/ufs.h,
+	  src/GParted_Core.cc,
+	  src/Makefile.am,
+	  src/ufs.cc: added ufs filesystemclass
+
+2006-04-02 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* include/Win_GParted.h,
 	  src/Win_GParted.cc: override Gtk::Window::on_show instead of
 	  connecting to signal_show()
